--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     color: #222;
     margin: 0;
     padding: 0;
-
+}
 .container {
     width: 90%;
     max-width: 960px;
@@ -110,6 +110,7 @@ nav ul li a {
 .dropbtn {
   cursor: pointer;
 }
+
 
 
 
